--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -28,6 +28,269 @@
             </div>
 
         </header>
+
+        <main>
+            <section class="section-about">
+                <div class="u-center-text u-margin-bottom-big">
+                    <h2 class="heading-secondary">VERY EXCITING TO FUCK</h2>
+                </div>
+
+                <div class="row">
+                    <div class="col-1-of-2">
+                        <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love.</h3>
+                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab hic id laboriosam voluptates quam, blanditiis asperiores expedita? Error, obcaecati. Natus corporis dolorem ipsum debitis quia qui quam reiciendis aliquam. Rerum.</p>
+
+                        <h3 class="heading-tertiary u-margin-bottom-small">Love yourself</h3>
+                        <p class="paragraph">sit amet consectetur adipisicing elit. expedita? Error, obcaecati. Natus corporis dolorem ipsum debitis quia qui quam reiciendis aliquam. Rerum.</p>
+
+                        <a href="#" class="btn-text">Learn more &rarr;</a>
+                    </div>
+                    <div class="col-1-of-2">
+                        <div class="composition">
+                            <img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
+                            <img src="img/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
+                            <img src="img/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="section-features">
+                
+                <div class="row">
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-world"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Explore the ass</h3>
+                            <p class="feature-box__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium sed molestias animi provident repudiandae nobis eligendi eum</p>
+
+                        </div>
+                    </div>
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-compass"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Explore the ass</h3>
+                            <p class="feature-box__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium sed molestias animi provident repudiandae nobis eligendi eum</p>
+
+                        </div>
+                    </div>
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-map"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Explore the ass</h3>
+                            <p class="feature-box__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium sed molestias animi provident repudiandae nobis eligendi eum</p>
+
+                        </div>
+                    </div>
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-heart"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Explore the ass</h3>
+                            <p class="feature-box__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium sed molestias animi provident repudiandae nobis eligendi eum</p>
+
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="section-tours">
+                <div class="u-center-text u-margin-bottom-big">
+                    <h2 class="heading-secondary">Most popular tours</h2>
+                </div>
+
+                <div class="row">
+                    <div class="col-1-of-3">
+                        <div class="card">
+                            <div class="card__side card__side--front">
+                                <div class="card__picture card__picture--1">
+                                </div>
+                                <h4 class="card__heading">
+                                    <span class="card__heading-span card__heading-span--1">
+                                        The sea explorer
+                                    </span>
+                                </h4>
+                                <div class="card__details">
+                                    <ul>
+                                        <li>3 days tour</li>
+                                        <li>Up to 30 people</li>
+                                        <li>2 tour guides</li>
+                                        <li>Sleep in cozy hotels</li>
+                                        <li>Difficulty: easy</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="card__side card__side--back  card__side--back-1">
+                                <div class="card__cta">
+                                    <div class="card__price-box">
+                                        <p class="card__price-only">Only</p>
+                                        <p class="card__price-value">$297</p>
+                                    </div>
+                                    <a href="#" class="btn btn--white">Book now!</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-1-of-3">
+                        <div class="card">
+                            <div class="card__side card__side--front">
+                                <div class="card__picture card__picture--2">
+                                </div>
+                                <h4 class="card__heading">
+                                    <span class="card__heading-span card__heading-span--2">
+                                        The forest hiker
+                                    </span>
+                                </h4>
+                                <div class="card__details">
+                                    <ul>
+                                        <li>7 days tour</li>
+                                        <li>Up to 40 people</li>
+                                        <li>6 tour guides</li>
+                                        <li>Sleep in provided tent</li>
+                                        <li>Difficulty: medium</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="card__side card__side--back  card__side--back-2">
+                                <div class="card__cta">
+                                    <div class="card__price-box">
+                                        <p class="card__price-only">Only</p>
+                                        <p class="card__price-value">$597</p>
+                                    </div>
+                                    <a href="#" class="btn btn--white">Book now!</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-1-of-3">
+                        <div class="card">
+                            <div class="card__side card__side--front">
+                                <div class="card__picture card__picture--3">
+                                </div>
+                                <h4 class="card__heading">
+                                    <span class="card__heading-span card__heading-span--3">
+                                        The snow adventurer
+                                    </span>
+                                </h4>
+                                <div class="card__details">
+                                    <ul>
+                                        <li>5 days tour</li>
+                                        <li>Up to 15 people</li>
+                                        <li>3 tour guides</li>
+                                        <li>Sleep in provided tent</li>
+                                        <li>Difficulty: hard</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="card__side card__side--back  card__side--back-3">
+                                <div class="card__cta">
+                                    <div class="card__price-box">
+                                        <p class="card__price-only">Only</p>
+                                        <p class="card__price-value">$797</p>
+                                    </div>
+                                    <a href="#" class="btn btn--white">Book now!</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="u-center-text u-margin-top-huge">
+                    <a href="#" class="btn btn--green">Discover all tours</a>
+                </div>
+            </section>
+
+            <section class="section-stories">
+                <div class="bg-video">
+                    <video class="bg-video__content" autoplay muted loop>
+                        <source src="img/video.mp4" type="video/mp4">
+                        <source src="img/video.webm" type="video/webm">
+                            Your browser is shit!
+                    </video>
+                </div>
+                <div class="u-center-text u-margin-bottom-big">
+                    <h2 class="heading-secondary">We make people enuinely happy</h2>
+                </div>
+
+                <div class="row">
+                    <div class="story">
+                        <div class="story__inner">
+                            <figure class="story__shape">
+                                <img class="story__img" src="img/nat-8.jpg" alt="Person">
+                                <figcaption class="story__caption">Mary Smith</figcaption>
+                            </figure>
+                            <div class="story__text">
+                                <h3 class="heading-tertiary u-margin-bottom-small">I FUCK MY GIRL HARD LAST NIGHT</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos veritatis animi nam optio nisi, veniam ratione Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat sequi molestias, quisquam adipisci ea quidem quas blanditiis commodi, iusto doloribus </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="story">
+                        <div class="story__inner">
+                            <figure class="story__shape">
+                                <img class="story__img" src="img/nat-9.jpg" alt="Person">
+                                <figcaption class="story__caption">Jack Hill</figcaption>
+                            </figure>
+                            <div class="story__text">
+                                <h3 class="heading-tertiary u-margin-bottom-small">I FUCK MY GIRL HARD LAST NIGHT</h3>
+                                <p>dolor Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem quasi culpa facere aliquid omnis tempore, alias sit doloremque odio aspernatur. Rerum eligendi natus officiis dolorem odio repellat, corporis expedita nostrum? </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="u-center-text u-margin-top-huge">
+                    <a href="#" class="btn-text">Read all stories →</a>
+                </div>
+            </section>
+
+            <section class="section-book">
+                <div class="row">
+                    <div class="book">
+                        <div class="book__form">
+                            <div class="u-margin-bottom-medium">
+                                <h2 class="heading-secondary">Start booking now</h2>
+                            </div>
+
+                            <form action="#" class="form">
+                                <div class="form__group">
+                                    <input id="name" type="text" class="form__input" placeholder="Full Name" required>
+                                    <label for="name" class="form__label">Full name</label>
+                                </div>
+
+                                <div class="form__group">
+                                    <input id="name" type="email" class="form__input" placeholder="Email address" required>
+                                    <label for="email" class="form__label">Email address</label>
+                                </div>
+
+                                <div class="form__group u-margin-bottom-medium">
+                                    <div class="form__radio-group">
+                                        <input id="small" name="size" type="radio" class="form__radio-input">
+                                        <label for="small" class="form__radio-label">
+                                            <span class="form__radio-button"></span>
+                                            Small tour group
+                                        </label>
+                                    </div>
+
+                                    <div class="form__radio-group">
+                                        <input id="large" name="size" type="radio" class="form__radio-input">
+                                        <label for="large" class="form__radio-label">
+                                            <span class="form__radio-button"></span>
+                                            Large tour group
+                                        </label>
+                                    </div>
+                                </div>
+
+                                <div class="form__group">
+                                    <button class="btn btn--green">Next step &rarr;</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
         
     </body>
 </html>
